[gd_scene load_steps=3 format=3 uid="uid://controls_hud"]

[ext_resource type="Script" path="res://scripts/controls_hud.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0, 0, 0, 0.7)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.6, 0.8, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ControlsHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="ControlsPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 420.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="ControlsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ControlsLabel" type="RichTextLabel" parent="ControlsPanel/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 18
bbcode_enabled = true
text = "Controls loading..."
fit_content = true
scroll_active = false

[node name="DebugPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 400.0
grow_horizontal = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="DebugPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="DebugLabel" type="RichTextLabel" parent="DebugPanel/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 18
bbcode_enabled = true
text = "Debug info loading..."
fit_content = true
scroll_active = false
